--- a/Lesson 12/index.html
+++ b/Lesson 12/index.html
@@ -235,5 +235,18 @@
 	
 	<script src="js/lesson 11.js">
 	</script>
+	
+<script >
+	const firebaseConfig = {
+  apiKey: "AIzaSyABnOlNrRz1Gqy-lI4Bfp4J5K8lvW1NHCY",
+  authDomain: "yoga-805fc.firebaseapp.com",
+  databaseURL: "https://yoga-805fc.firebaseio.com",
+  projectId: "yoga-805fc",
+  storageBucket: "yoga-805fc.appspot.com",
+  messagingSenderId: "795071128743",
+  appId: "1:795071128743:web:607561eae0dc79c1bba782",
+  measurementId: "G-PG69XHPLDZ"
+};
+</script>
 </body>
 </html>
